# Testing-Series

./: CMakeLists.txt  README.md  calculations.cpp  calculations.h
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  main.cpp
src/math/: CMakeLists.txt  calculations.cpp  calculations.h
test/: CMakeLists.txt  main.cpp  test_math_calculations.cpp  test_math_calculations.h
